# kbi-self-rewrite

.github/workflows/: build.yml
analyzer/: package.json
recorder/: CMakeLists.txt  vcpkg.json
recorder/src/controller/: controller_console.cpp
recorder/src/core/recorder/linux/: device_name.cpp
recorder/src/core/recorder/win/: impl.h  recorder_win_gameinput.cpp
recorder/src/serializer/: serializer_json.cpp
